# darknet-nnpack-cpp

./: Makefile  README.md  folder_yolov3.sh  image_yolov3.sh  video_yolov3.sh
cpp/: CMakeLists.txt  README.md  darknetApp
cpp/src/: main.cpp
data/: coco_1cls.data
data/labels/.svn/: wc.db
include/: darknet.h
python/: darknet.py
src/: blas.h  demo.c  image.c  image.h
test/: Makefile  Makefile-myproj2  detect_obj.cpp  main.cpp
test/myproj2/: detect_obj.h
